--- a/_posts/2018-04-27-YUV.md
+++ b/_posts/2018-04-27-YUV.md
@@ -62,6 +62,8 @@ NV21 和 NV12 类似，采样比是 `4:2:0`，也是 semi planar 存储方式，
 
 YUV 的格式太多，这里就不一一介绍了，把握上面介绍的两个要点即可：采样比，存储方式。
 
+_可以参考下 [fourcc 的这个网页](https://www.fourcc.org/yuv.php)_。
+
 ## 参考文章
 
 + [Chroma subsampling](https://en.wikipedia.org/wiki/Chroma_subsampling)
