site: add index.html suffix, remove g+

--- a/_posts/2015-12-22-Hey-2016.md
+++ b/_posts/2015-12-22-Hey-2016.md
@@ -15,7 +15,7 @@ tags:
 也是7月，搬进了“新家”，我对寓所非常满意，我想它将是我真正拥有自己的家之前，唯一的“新家”了。就是在这里，每天7点半起床，12点睡觉，骑着电动车上下班，写代码，看文章，偶尔做一顿排骨，偶尔锻炼下身体。
 
 ## 技术
-[YOLO团队](https://www.yoloyolo.tv/)非常棒！
+[YOLO团队](https://www.yoloyolo.tv)非常棒！
 
 临近毕业之际，我向大学里的几位导师邮件告别时就说过，在这里，我得到了飞速的成长，能够在YOLO完成从学生到职场人的转变，实为我幸！
 
@@ -25,7 +25,7 @@ tags:
 
 要看的东西，还有很多，不过无需焦躁，之前一位在职场打拼八年的师兄，给过我一个建议，非常受用：人生是场马拉松，认准目标，稳步前行即可，千万别急，良好的节奏非常重要。
 
-当然，2015技术上的成长还是可喜的。不管怎样，总算认真完整看完了人生第一本技术书籍；[OkBuck](https://github.com/Piasy/OkBuck)，[AndroidTDDBootStrap](https://github.com/Piasy/AndroidTDDBootStrap)和[notes](https://github.com/Piasy/notes)这三个repo收获了超过700个star；技术笔记项目notes被收录进[极客学院Wiki](http://wiki.jikexueyuan.com/project/notes/)；搭建起了[技术博客](http://blog.piasy.com/)；成功“勾搭”上了贵系师兄兼哥大教授；收到了Snapchat的加入邀请...
+当然，2015技术上的成长还是可喜的。不管怎样，总算认真完整看完了人生第一本技术书籍；[OkBuck](https://github.com/Piasy/OkBuck)，[AndroidTDDBootStrap](https://github.com/Piasy/AndroidTDDBootStrap)和[notes](https://github.com/Piasy/notes)这三个repo收获了超过700个star；技术笔记项目notes被收录进[极客学院Wiki](http://wiki.jikexueyuan.com/project/notes)；搭建起了[技术博客](https://blog.piasy.com/index.html)；成功“勾搭”上了贵系师兄兼哥大教授；收到了Snapchat的加入邀请...
 
 ## 身体
 年初还在学校时，坚持了两个月每天锻炼，但到了后来，基本算是荒废了，其实也没在忙什么，主要还是嫌累。本科有一位同学身体不适休学将近两年了，本该引以为戒的。
