--- a/_posts/2018-04-27-YUV.md
+++ b/_posts/2018-04-27-YUV.md
@@ -56,7 +56,7 @@ NV21 和 NV12 类似，采样比是 `4:2:0`，也是 semi planar 存储方式，
 
 ![](https://imgs.piasy.com/2018-10-18-nv21format.png)
 
-注意：有个工具网站 [rawpixels.net](http://rawpixels.net/)，它的 Predefined format 应该是把 NV12 和 NV21 搞反了，它的 NV12 是 V 在前，NV21 是 U 在前，实际上应该是 NV12 U 在前，NV21 V 在前，因此使用这个网站时，这两种格式应该互换一下。
+注意：有个工具网站 [rawpixels.net](http://rawpixels.net)，它的 Predefined format 应该是把 NV12 和 NV21 搞反了，它的 NV12 是 V 在前，NV21 是 U 在前，实际上应该是 NV12 U 在前，NV21 V 在前，因此使用这个网站时，这两种格式应该互换一下。
 
 ## 其他格式
 
