--- a/_drafts/2017-03-11-.md
+++ b/_drafts/2017-03-11-.md
@@ -5,7 +5,7 @@ title:
 
 ## toy code
 
-13 年下半年那会儿，我参加了一次百度地图团队举办的一个比赛，用它们的 SDK 做一个 APP 出来。我花了两周的时间，在一台安卓 2.3 系统的三星手机上做了一个 APP，用户在同一个城市挑选一些景点，我就调用百度地图的 SDK 查出每两个点之间的交通方案，然后规划出一条路上耗时最短的路线，去玩遍这些景点，这就是个旅行规划的 APP。参赛之后没有任何结果，只是去百度大厦参加了一个线下沙龙，混了个贴纸。
+13 年下半年那会儿，我参加了一次百度地图团队举办的一个比赛，用他们的 SDK 做一个 APP 出来。我花了两周的时间，在一台安卓 2.3 系统的三星手机上做了一个 APP，用户在同一个城市挑选一些景点，我就调用百度地图的 SDK 查出每两个点之间的交通方案，然后规划出一条路上耗时最短的路线，去玩遍这些景点，这就是个旅行规划的 APP。参赛之后没有任何结果，只是去百度大厦参加了一个线下沙龙，混了个贴纸。
 
 后来基于这个想法，14 年参加了学校的挑战杯比赛，当然把问题考虑得更全面了一点，和同班同学一起讨论各种场景，各种功能，也请了个美院的同学帮忙设计视觉。功能做得更丰富，界面也做得更好看了，但还是没做出名堂，一帮大一大二的小朋友参赛，系里总得鼓励鼓励吧，所以小朋友们进了决赛，老流氓们的项目都毙掉了 :)
 
