--- a/_posts/2019-11-13-More-About-H264.md
+++ b/_posts/2019-11-13-More-About-H264.md
@@ -100,7 +100,7 @@ H264BitstreamParser::Result H264BitstreamParser::ParseNonParameterSetNalu(
 1. 由于 slice header 句法元素的解析需要用到 SPS/PPS，所以如果没有解析出 SPS/PPS，就只能返回错误了；
 1. 调用 `H264::ParseRbsp` 函数去掉码流中对起始码（`001` 或 `0001`）的转义处理，关于起始码转义，可以阅读我的[我需要知道：H.264](https://blog.piasy.com/2017/09/22/I-Need-Know-About-H264/index.html#%E5%8A%9F%E8%83%BD%E5%88%86%E5%B1%82) 这篇文章；
 1. `rtc::BitBuffer` 类实现了前文各种 descriptor 的解码逻辑，由于 NALU 的第一个字节（NALU header）无需解析，所以可以跳过；
-1. 这个判断逻辑虽然执行结果没有问题，但逻辑上有瑕疵，因为 NALU type 其实是首字节的低 5 位，所以应该和 `0x1F` 做按位与操作才对，但是由于 `H264::NaluType::kIdr` 这个类型的取值是 5，不会超过低 4 位，所以执行结果不会出错，此处可以改为 `bool is_idr = H264::ParseNaluType(source[0]) == H264::NaluType::kIdr;`，如果担心多一层函数调用，则可以把 `ParseNaluType` 函数增加 `inline` 关键字；
+1. 这个判断逻辑虽然执行结果没有问题，但逻辑上有瑕疵，因为 NALU type 其实是首字节的低 5 位，所以应该和 `0x1F` 做按位与操作才对，但是由于 `H264::NaluType::kIdr` 这个类型的取值是 5，不会超过低 4 位，所以执行结果不会出错，~~此处可以改为 `bool is_idr = H264::ParseNaluType(source[0]) == H264::NaluType::kIdr;`，如果担心多一层函数调用，则可以把 `ParseNaluType` 函数增加 `inline` 关键字~~ 其实 `nalu_type` 已经作为参数传了进来...
 1. 这里我们关心的其实只有 QP 相关的字段，其他的字段取值都不重要，但由于 QP 字段的位置我们无法知道，只能按照句法元素顺次解析到 QP 所在的字段，WebRTC 的代码里就用 `golomb_tmp` 和 `bits_tmp` 去容纳不关心的字段的值；
 1. 查看句法元素，我们知道首先是 `ue(v)` 格式的 `first_mb_in_slice`，那就调用封装好的 `ReadExponentialGolomb` 即可，里面的实现就是前文所述的 Golomb 解码逻辑；
 
