publish kmpp post; advocate Hack WebRTC;

--- a/_posts/2019-11-13-More-About-H264.md
+++ b/_posts/2019-11-13-More-About-H264.md
@@ -6,7 +6,7 @@ tags:
     - 实时多媒体
 ---
 
-两年多前，我发布了[我需要知道：H.264](https://blog.piasy.com/2017/09/22/I-Need-Know-About-H264/index.html) 一文，限于篇幅，当时没有对具体的句法元素做任何总结。
+两年多前，我发布了[我需要知道：H.264](/2017/09/22/I-Need-Know-About-H264/index.html) 一文，限于篇幅，当时没有对具体的句法元素做任何总结。
 
 > 原本我想把每一层的各个句法元素简略过一遍的（实际也这么做过），但奈何完全无法涵盖细节，而众多句法元素罗列一遍实在无法脱离堆砌之嫌，所以索性删了个干净。感兴趣的朋友强烈建议阅读原书，或者 H.264 SPEC，至于从事视频编解码相关工作的朋友，则一定要对句法和语义烂熟于胸了。
 
