--- a/_instructions/2019-12-21-Nvidia-TX2.md
+++ b/_instructions/2019-12-21-Nvidia-TX2.md
@@ -31,4 +31,27 @@ sudo apt-get update
 ```
 
 + 刷 4.3 时，安装 cuda 可能报错依赖不会安装，这时在 TX2  终端里执行 `sudo apt-get --fix-broken install` 即可完成 cuda 的安装；
-+ 刷 3.3 时，换源了也还是会被加上 ubuntu 官方源，可能比较慢，只能等……
++ 刷 3.3 时，换源了也还是会被加上 ubuntu 官方源，可能比较慢，只能等……把国内的源加在前面，好像就可以了……
+
+虚拟机突然一启动就自动注销，改为使用命令行方式安装：
+
+```bash
+sdkmanager --cli install --license accept --user xz4215@gmail.com --logintype devzone --product Jetson --version 4.3 --targetos Linux --host --target P3310 --flash all
+```
+
++ `--target P3310` 指明是 TX2，P3310 就是 TX2；
+
+然后安装过程中由于 `apt-get update` 报错
+
+```bash
+Err:12 https://repo.download.nvidia.cn/jetson/t186 r32/main arm64 Packages
+  File has unexpected size (8084 != 7930). Mirror sync in progress? [IP: 117.149.254.82 443]
+  Hashes of expected file:
+   - Filesize:7930 [weak]
+   - SHA256:a80383566cab2ea7baa68c7c17ac6f581b7ec47d376d832c1824d2fd1ab8916e
+   - SHA1:268b9c78b441a358f804dab1b1c67c7c91ffbad7 [weak]
+   - MD5Sum:6d1e8cb93e0f23410eecfd8007d2e4df [weak]
+  Release file created at: Tue, 17 Dec 2019 23:52:06 +0000
+```
+
+估计是 NV 服务器出了问题，不过编辑 `/etc/apt/sources.list.d/nvidia-l4t-apt-source.list`，把这个源注释掉之后重试，就能安装成功了。
