OWT Server clustering post

--- a/_posts/2020-03-28-KITE.md
+++ b/_posts/2020-03-28-KITE.md
@@ -10,7 +10,7 @@ tags:
 
 > 一个房间占 6%，不代表三个房间占 18%，这里有个线性能力的问题，几百个线程的，要是能线性了，那也就真的奇迹再现。
 
-但笔记本打开浏览器 tab 或多台手机测试，很容易就触发设备接入网带宽平均，2.5Mbps 推流，实际上两人房间开到第三个就已经歇菜了。
+但笔记本打开浏览器 tab 或多台手机测试，很容易就触发设备接入网带宽瓶颈，2.5Mbps 推流，实际上两人房间开到第三个就已经歇菜了。
 
 所以必须在服务器上进行测试，好在已经有了现成的轮子：KITE。
 
