OWT Advanced post 3

--- a/_posts/2020-05-23-RTP.md
+++ b/_posts/2020-05-23-RTP.md
@@ -6,7 +6,7 @@ tags:
     - 基础知识
 ---
 
-之前发现连接 OWT Server 4.3.x 时，无法获取到 audio sending 相关的 stats，最终定位到是没有收到 Server 的 RTCP RR 报文，为了分析这个问题，我决定梳理一下 OWT Server 的 RTCP 流程，于是便有了 [VSCode 远程调试 Docker 里的 OWT Server](/2020/05/05/VSCode-Remote-Debug-in-Docker/index.html)。不过在扎进代码之前，我决定先系统学习一下 RTP 协议，正好今年二月份 51talk 技术团队翻译了《RTP: Audio and video for the Internet》这一经典著作，正好帮了大忙。
+之前发现连接 OWT Server 4.3.x 时，无法获取到 audio sending 相关的 stats，最终定位到是没有收到 Server 的音频 RTCP RR 报文，为了分析这个问题，我决定梳理一下 OWT Server 的 RTCP 流程，于是便有了 [VSCode 远程调试 Docker 里的 OWT Server](/2020/05/05/VSCode-Remote-Debug-in-Docker/index.html)。不过在扎进代码之前，我决定先系统学习一下 RTP 协议，正好今年二月份 51talk 技术团队翻译了《RTP: Audio and video for the Internet》这一经典著作，正好帮了大忙。
 
 今天我就把阅读笔记分享给大家，仅供参考。
 
