update YUV post

--- a/_posts/2018-04-27-YUV.md
+++ b/_posts/2018-04-27-YUV.md
@@ -5,15 +5,15 @@ tags:
     - 实时多媒体
 ---
 
-从事多媒体开发的朋友，对 YUV 绝对不陌生，但大家真的能把 YUV 彻底讲清楚吗？这次，让我们彻底揭开 YUV 的「不神秘」面纱。
+从事多媒体开发的朋友，对 YUV 绝对不陌生，但大家真的能把 YUV 彻底讲清楚吗？这次，让我们彻底揭开 YUV「不神秘」的面纱。
 
 ## 采样比
 
 + 人类视觉系统对亮度（luma）的敏感度高于对色度（chroma）的敏感度，因此可以对色度数据进行下采样；
-+ 采样比通常表示为 `J:a:b`，以表示一个宽为 J 像素、高为 2 像素的采样区域内 Y Cb Cr 的采样比：
-  - J 表示采样区域的宽度，通常为 4；
-  - a 表示第一行色度采样数；
-  - b 表示第二行色度采样与第一行色度采样的不同样点数；
++ 采样比通常表示为 `J:a:b`，以表示一个宽为 J 像素、高为 2 像素的采样区域内 Y Cb Cr（Y U V）的采样比：
+  + J 表示采样区域的宽度，通常为 4；
+  + a 表示第一行色度采样数；
+  + b 表示第二行色度采样与第一行色度采样的不同样点数；
 
 ![](https://imgs.piasy.com/2018-04-27-sampling_systems_and_ratios.png)
 
@@ -22,7 +22,9 @@ tags:
 + `4:1:1`：宽度 J 为 4，第一行只有一个样点（一种颜色），所以 a 为 1，第二行和第一行不同的样点只有一个，所以 b 为 1，所以为 `4:1:1`；
 + `4:2:0`：宽度 J 为 4，第一行有两个样点，所以 a 为 2，第二行和第一行样点完全相同，所以 b 为 0，所以为 `4:2:0`；
 
-这个比例值并非 Y Cb Cr（Y U V）分量的直接比例。对亮度来说，一个样点有一个 Y 值，对色度来说，一个样点有两个值：Cb 和 Cr。对 `4:2:0` 来说，4 个亮度，2 个色度，所以是 4 个 Y，2 个 Cb，2 个 Cr。
+这个比例值并非 Y Cb Cr 分量个数的直接比例。对亮度来说，一个样点由一个 Y 构成，而对色度来说，一个样点由两个值构成：Cb 和 Cr。以 `4:2:0` 为例，在 4x2 的采样区域内，有 8 个亮度样点，2 个色度样点（在上图中可以看成左右各一个），所以有 8 个 Y，2 个 Cb，2 个 Cr。
+
+a 和 b 的取值并非可以随意组合，比如 a 为 2 时，表示第一行有两个样点，如果 b 为 1，那就是说第二行样点有一个和第一行不同，但到底哪一个样点和第一行不同，无法确定，所以这种组合就被禁止了。实际上常见的可取组合也就是上图中列出的五种。
 
 ## planar, packed 和 semi planar
 
@@ -31,6 +33,12 @@ planar, packed 和 semi planar 是描述分量如何存储的：
 + planar: 有时也称 triplanar，有三个 plane，每种分量连续存储，先存储所有的 Y 分量，再存储所有的 Cb 分量，最后存储所有的 Cr 分量（也可以 Cr 在前，Cb 在后）；
 + packed: 只有一个 plane，n 个样点的 Y Cb Cr 分量一起存储，接着存储下 n 个样点的分量；n 的取值、其中三种分量的存储方式，也有多种组合；
 + semi planar: 有两个 plane，先存储所有的 Y 分量，后面 Cb 和 Cr 分量一起存储；
+
+## stride 或 pitch
+
+YUV 数据在内存中存储时，每行像素的数据后面可能还有填充字节，这主要是因为有些系统/环境/操作对内存的字节对齐有要求，比如 64 字节对齐，那么宽度为 720 像素的图像，一行就不满足 64 对齐的要求，那就要填充到 768 像素。存储一行像素所需的字节数，就叫 stride，也叫 pitch。比如这里举的例子，宽为 720，stride 或 pitch 就是 64。
+
+图像的高度通常没有类似的情况，因为图像处理通常都是逐行的，所以才会对一行的宽度有要求，而对于多少行则没有要求。
 
 ## I420
 
@@ -68,3 +76,4 @@ _可以参考下 [fourcc 的这个网页](https://www.fourcc.org/yuv.php)_。
 
 + [Chroma subsampling](https://en.wikipedia.org/wiki/Chroma_subsampling)
 + [YUV](https://wiki.videolan.org/YUV)
++ [Image Stride](https://docs.microsoft.com/en-us/windows/win32/medfound/image-stride)
