--- a/_instructions/2019-12-21-Nvidia-TX2.md
+++ b/_instructions/2019-12-21-Nvidia-TX2.md
@@ -33,7 +33,7 @@ sudo apt-get update
 + 刷 4.3 时，安装 cuda 可能报错依赖不会安装，这时在 TX2  终端里执行 `sudo apt-get --fix-broken install` 即可完成 cuda 的安装；
 + 刷 3.3 时，换源了也还是会被加上 ubuntu 官方源，可能比较慢，只能等……把国内的源加在前面，好像就可以了……
 
-虚拟机突然一启动就自动注销，改为使用命令行方式安装：
+虚拟机突然一启动 sdkmanager 就自动注销，改为使用命令行方式安装：
 
 ```bash
 sdkmanager --cli install --license accept --user xz4215@gmail.com --logintype devzone --product Jetson --version 4.3 --targetos Linux --host --target P3310 --flash all
@@ -55,3 +55,9 @@ Err:12 https://repo.download.nvidia.cn/jetson/t186 r32/main arm64 Packages
 ```
 
 估计是 NV 服务器出了问题，不过编辑 `/etc/apt/sources.list.d/nvidia-l4t-apt-source.list`，把这个源注释掉之后重试，就能安装成功了。
+
+刷 4.4 需要更新 sdkmanager，并且命令为：
+
+```bash
+sdkmanager --cli install --license accept --user xz4215@gmail.com --logintype devzone --product Jetson --version 4.4 --targetos Linux --host --target P3310-1000 --flash all
+```
