--- a/_posts/2019-12-31-Tough-2019.md
+++ b/_posts/2019-12-31-Tough-2019.md
@@ -11,6 +11,6 @@ tags:
 
 ---
 
-> 人的一生应该这样度过：当回忆往事时，他不会因为虚度年化而后悔，也不会因为碌碌无为而羞愧。 -《钢铁是怎样炼成的》
+> 人的一生应该这样度过：当回忆往事时，他不会因为虚度年华而后悔，也不会因为碌碌无为而羞愧。 -《钢铁是怎样炼成的》
 
 为了更好的自己，加油！
