--- a/_posts/2020-05-23-RTP.md
+++ b/_posts/2020-05-23-RTP.md
@@ -10,6 +10,8 @@ tags:
 
 今天我就把阅读笔记分享给大家，仅供参考。
 
+[我加了评论标注的版本可以从这里下载](https://imgs.piasy.com/2020-05-31-RTP%E4%B8%AD%E6%96%87%E7%89%88%20by%2051TalkAM%20--%20comments%20by%20Piasy.pdf)。
+
 ## 概述
 
 RTP 由主协议规范 [rfc3550](https://tools.ietf.org/html/rfc3550) 和一系列 Profile、Payload Format 规范组成，RTP 主协议被设计为可以传输任意类型的数据，结合了具体的 Profile 和 Payload Format 规范后，我们才能知道完整的报文类型和格式、一些字段的使用规则，以及封包解包规则。
