--- a/_posts/2020-12-28-1-6-10-28.md
+++ b/_posts/2020-12-28-1-6-10-28.md
@@ -133,7 +133,7 @@ How to be an Android Expert](https://academy.realm.io/posts/droidcon-boston-chiu
 
 圣诞那天和一位十年未联系的曾经的好友重新建立了联系，竟能得到谅解，真的是非常感动、感激。
 
-人这一生到底要追求什么？为人类发展做出贡献？创造巨大价值？我想觉大多数人都不是这样，有健康的身体、幸福的家庭，再有一些知己和好友，就很难得了，再行一些善事，为社会做些哪怕微薄的贡献，也就可以自豪了。
+人这一生到底要追求什么？为人类发展做出贡献？创造巨大价值？我想绝大多数人都不是这样，有健康的身体、幸福的家庭，再有一些知己和好友，就很难得了，再行一些善事，为社会做些哪怕微薄的贡献，也就可以自豪了。
 
 或许我所要探寻的，也就是对这种状态的感知和认可吧，充分的感知，坚定的认可。
 
