libdatachannel android wrapper

--- a/_drafts/2022-11-05-Hack-WebRTC-38387.md
+++ b/_drafts/2022-11-05-Hack-WebRTC-38387.md
@@ -39,6 +39,7 @@ ios_enable_code_signing=false
 is_component_build=false
 use_goma=false
 is_debug=true
+enable_dsyms=true
 rtc_include_tests=false
 ```
 
@@ -75,7 +76,7 @@ To view all possible args, run "gn args --list <out_dir>"
 The build continued as if that argument was unspecified.
 ```
 
-最后是需要加上 `rtc_enable_symbol_export=true`，否则在项目外使用 WebRTC 库的时候会报链接错误：
+以及需要加上 `rtc_enable_symbol_export=true`，否则在项目外使用 WebRTC 库的时候会报链接错误：
 
 ```bash
 Undefined symbol: _OBJC_CLASS_$_RTCAudioSession
@@ -107,6 +108,8 @@ Undefined symbol: _RTCLogEx
 Undefined symbol: _RTCSetupInternalTracer
 Undefined symbol: _RTCShutdownInternalTracer
 ```
+
+最后是需要加上 `enable_dsyms=true`，否则 Xcode 会无法调试源码（断点无法命中），其实这个问题去年就有朋友在[星球里提过](https://t.zsxq.com/08kGxgz6T)。
 
 Android 的编译同样遇到了一点小问题，其实上次更新到 32599 就遇到了 Java 代码里 `@Priority` 和 `@NetworkPreference` 找不到定义的问题，当时因为只是注解，所以就注释了事，这次还多了个 `VideoFrameBufferType`，这看着应该是有 Java 代码是根据 C++ 代码动态生成的，看了看 gn 文件，试着用 ninja 编译了一下 `libjingle_peerconnection_java`，果然就在 out 目录搜到了生成的 Java 文件。为了方便，我就把它们提交到了 HackWebRTC 的代码库里。
 
