publish Android OpenSSL post

--- a/_drafts/2023-06-22-KMP-XLog2.md
+++ b/_drafts/2023-06-22-KMP-XLog2.md
@@ -124,6 +124,8 @@ _刚好他还在 slack 和我闲聊了两句，我看他时区和我手机里的
 
 我们要把库发布到 maven local 或者 maven central 的时候，需要配置 gpg 签名，之前 Linux 我是在 macOS 上跑的 docker，可以复用本地的 key 配置，在 Windows 上就需要新创建一套。
 
+### Windows 配置 gpg 签名
+
 创建 gpg key 很简单，网上可以搜到，在 git bash 里执行：
 
 ```bash
@@ -160,8 +162,64 @@ signing.secretKeyRingFile=/Users/hubot/.gnupg/3AA5C34371567BD2.gpg
 
 _注意，上面只是举了个例子，路径、key id、密码需要根据自己的实际情况替换_，`signing.keyId` 就是导出的 key id 的后八位。
 
+### Windows wrapper 编译
+
+这个过程也遇到了不少问题。
+
+wrapper 代码和 CMakeLists 在 Linux 支持的时候就已经写好了，但是在编译 Windows 静态库的时候会报错：
+
+```bash
+lld-link: error: /failifmismatch: mismatch detected for 'RuntimeLibrary':
+```
+
+runtime library 不匹配的问题之前倒是也多次遇见过，这次 Google 出来是说要给 cmake 命令加上 `-DCMAKE_MSVC_RUNTIME_LIBRARY=MultiThreaded` 参数，不过没有用，最后还是老办法，在 CMakeLists.txt 里修改编译选项：
+
+```cmake
+    set(CompilerFlags
+        CMAKE_CXX_FLAGS
+        CMAKE_CXX_FLAGS_DEBUG
+        CMAKE_CXX_FLAGS_RELEASE
+        CMAKE_CXX_FLAGS_RELWITHDEBINFO
+        CMAKE_C_FLAGS
+        CMAKE_C_FLAGS_DEBUG
+        CMAKE_C_FLAGS_RELEASE
+        CMAKE_C_FLAGS_RELWITHDEBINFO)
+        
+    foreach(CompilerFlag ${CompilerFlags})
+        string(REPLACE "/MD" "/MT" ${CompilerFlag} "${${CompilerFlag}}")
+    endforeach()
+```
+
+也就是把 C/CXX 的编译选项里的 `/MD` 都替换为 `MT`，实际上 mars xlog 里也有这个代码。
+
+接下来就是在 gradle 编译的时候报错了：
+
+```bash
+lld-link: error: duplicate symbol: _atexit
+>>> defined at E:/mingwbuild/mingw-w64-crt-git/src/mingw-w64/mingw-w64-crt/crt\crtexe.c:438
+>>>            C:\Users\Admin\.konan\dependencies\msys2-mingw-w64-i686-2\i686-w64-mingw32\lib\crt2.o
+>>> defined at LIBCMT.lib(utility.obj)
+
+lld-link: error: duplicate symbol: __onexit
+>>> defined at libmsvcrt.a(dshjes00632.o)
+>>> defined at LIBCMT.lib(utility.obj)
+clang++: error: linker command failed with exit code 1 (use -v to see invocation)
+```
+
+看起来是 x86 和 x64 混用了，检查之后发现确实编译 wrapper 库和 gradle 配置的架构确实不一样。适逢看到 [Kotlin 1.8.20 的 release note 里弃用 mingwX86 支持](https://kotlinlang.org/docs/whatsnew1820.html#update-for-kotlin-native-targets)，那就只搞一下 x64 好了。
+
+但都统一为 x64 后，依然有问题：
+
+```bash
+lld-link: error: LIBCMT.lib(std_type_info_static.obj): machine type x86 conflicts with x64
+lld-link: error: LIBCMT.lib(delete_scalar_size.obj): machine type x86 conflicts with x64
+lld-link: error: LIBCMT.lib(delete_scalar.obj): machine type x86 conflicts with x64
+```
+
+甚至我[创建了一个最简单的 demo，也还是有问题，那我就给 Kotlin 官方提 bug 了](https://youtrack.jetbrains.com/issue/KT-56427)。
+
 ## macOS 支持
 
 ## 包大小
 
-朋友们，再会 :)
+_这篇文章从一月份就开始筹划，期间因为各种事情延期，不过我已决定重出江湖，接下来会有更多的分享_，朋友们，再会 :)
