--- a/_posts/2023-06-12-KMP-XLog2.md
+++ b/_posts/2023-06-12-KMP-XLog2.md
@@ -5,7 +5,7 @@ tags:
     - 多平台
 ---
 
-本文是[封装、发布一个腾讯 mars xlog 的 KMP lib](/2022/11/26/KMP-XLog/index.html) 的续集，添加了更多平台的支持：JS/Linux/Windows/macOS。页探索了这些平台的库发布方案，以及单元测试，最后测试了一下 iOS 平台引入 KMP 的包大小成本（147KB）。
+本文是[封装、发布一个腾讯 mars xlog 的 KMP lib](/2022/11/26/KMP-XLog/index.html) 的续集，添加了更多平台的支持：JS/Linux/Windows/macOS。也探索了这些平台的库发布方案，以及单元测试，最后测试了一下 iOS 平台引入 KMP 的包大小成本（147KB）。
 
 ## JS 支持
 
