--- a/_posts/2023-06-12-KMP-XLog2.md
+++ b/_posts/2023-06-12-KMP-XLog2.md
@@ -160,6 +160,14 @@ signing.password=
 signing.secretKeyRingFile=/Users/hubot/.gnupg/3AA5C34371567BD2.gpg
 ```
 
+最后，还需要把公钥上传到 key server：
+
+```bash
+gpg --keyserver http://keyserver.ubuntu.com:11371 --send-keys 3AA5C34371567BD2
+gpg --keyserver https://keys.openpgp.org --send-keys 3AA5C34371567BD2
+gpg --keyserver http://pgp.mit.edu:11371 --send-keys 3AA5C34371567BD2
+```
+
 _注意，上面只是举了个例子，路径、key id、密码需要根据自己的实际情况替换_，`signing.keyId` 就是导出的 key id 的后八位。
 
 ### Windows wrapper 编译
