--- a/_posts/2023-09-23-Hack-WebRTC-38316.md
+++ b/_posts/2023-09-23-Hack-WebRTC-38316.md
@@ -12,6 +12,7 @@ tags:
 
 不喜欢听故事，只对代码干货感兴趣的朋友，可以直接看这几个 highlight:
 
++ [hack_webrtc_38316 分支](https://github.com/HackWebRTC/webrtc/tree/hack_webrtc_38316)；
 + [从 owt 88-sdk cherry-pick h265 支持](https://github.com/HackWebRTC/webrtc/commit/34c9bd7bc4c377f276c3bbe8819708f0fb7d322d)；
 + 使用 in-tree ffmpeg 时，[编译 iOS 需要打的 patch 以及相关命令](https://github.com/HackWebRTC/webrtc/blob/hack_webrtc_38316/sdk/build_ios_framework.sh)，[编译 Android 时需要打的 patch 以及相关命令](https://github.com/HackWebRTC/webrtc/blob/hack_webrtc_38316/sdk/build_android_libs.sh)；
 
